Changed kouls to kauls

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Kouls</title>
+    <title>Kauls</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -23,8 +23,7 @@
       <!-- Intro -->
       <div id="intro">
         <h1>
-          We are<br />
-          Kouls
+          Welcome<br />
         </h1>
         <!-- <p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p> -->
@@ -41,7 +40,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">Kouls</a>
+        <a href="index.html" class="logo">Kauls</a>
       </header>
 
       <!-- Nav -->
@@ -67,7 +66,7 @@
             <!-- <span class="date">April 25, 2017</span> -->
             <h2>
               <a href="#"
-                >And this is our<br />
+                >This is our<br />
                 Family</a
               >
             </h2>
@@ -94,7 +93,7 @@
               <h2>
                 <a href="#"
                   >B.L<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -116,7 +115,7 @@
               <h2>
                 <a href="#"
                   >Susheela<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -138,7 +137,7 @@
               <h2>
                 <a href="#"
                   >Rakesh<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -160,7 +159,7 @@
               <h2>
                 <a href="#"
                   >Sunita<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -226,7 +225,7 @@
               <h2>
                 <a href="#"
                   >Robin<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -248,7 +247,7 @@
               <h2>
                 <a href="#"
                   >Krishna<br />
-                  Koul</a
+                  Kaul</a
                 >
               </h2>
             </header>
@@ -291,7 +290,7 @@
               <!-- <span class="date">April 7, 2017</span> -->
               <h2>
                 <a href="#"
-                  >Bulbul<br />
+                  >Rishika<br />
                   Koul</a
                 >
               </h2>
