--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Kouls</a>
+						<a href="index.html" class="logo">Kauls</a>
 					</header>
 
 				<!-- Nav -->
