Fixed send message buton

--- a/generic.html
+++ b/generic.html
@@ -76,7 +76,7 @@
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input onclick="myFunction();" value="Send Message" /></li>
+									<li><button onclick="myFunction();"/>Send Message</li>
 								</ul>
 							</form>
 						</section>
